--- a/bdi/WebContent/user/join.html
+++ b/bdi/WebContent/user/join.html
@@ -8,7 +8,7 @@
 	<form>
 		<table border="1">
 			<tr>
-				<th><label for="name">이름</label></th>
+				<th><label for="name" >이름</label></th>
 				<td><input type ="text" id="name"></td>
 			</tr>
 			<tr>
@@ -38,14 +38,50 @@
 			</tr>
 			<tr>
 				<td colspan="2" style="text-align:center">
-				<button type="button" onclick="alert(1)">회원가입</button></td>
+				<button type="button" onclick="checkValue()">회원가입</button></td>
 			</tr>
 		</table>
 	</form>
 <script>
-test();
-function test(a){
-	alert("난 테스트 함수");
+
+function checkValue(){
+	var nameObj = document.getElementById("name");
+	if(nameObj.value.trim().length<2){
+		alert("이름은 2글자 이상입니다.");
+		nameObj.value = "";
+		nameObj.focus();
+		return false;
+	}
+	var birthObj = document.getElementById("birth");
+	if(birthObj.value.trim().length<6){
+		alert("생년월일은 6글자 이상입니다.");
+		birthObj.value = "";
+		birthObj.focus();
+		return false;
+	}
+	var EmailObj = document.getElementById("Email");
+	if(EmailObj.value.trim().length<5){
+		alert("이메일은 5글자 이상입니다.");
+		EmailObj.value = "";
+		EmailObj.focus();
+		return false;
+	}
+	var idObj = document.getElementById("id");
+	if(idObj.value.trim().length<1){
+		alert("아이디는 1글자 이상입니다.");
+		idObj.value="";
+		idObj.focus();
+		return false;
+	}
+	var pwdObj = document.getElementById("pwd");
+	if(pwdObj.value.trim().length<10){
+		alert("비밀번호는 10글자 이상입니다.");
+		pwdObj.value="";
+		pwdObj.focus();
+		return false;
+	}
+	
+	
 }
 </script>
 </body>
